# MqttApplicationSamples

./: .env  .eslintrc.json  .gitignore  CMakeLists.txt  CMakePresets.json  Cargo.toml  NOTICE.txt  README.md  Samples.sln  Setup.md  az-eg.sh  azure-pipelines.yml  cgmanifest.json  generate_env.sh  go.mod  go.sum  go.work  go.work.sum  nuget.config  package-lock.json  package.json  sample-goals.md  tsconfig.base.json  tsconfig.json
.devcontainer/: devcontainer.json  postCreateCommand.sh
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/scripts/: code_style.sh
.github/workflows/: c_checks.yml  c_tests.yml  dotnet_checks.yml
_iotmq/: config-certs.sh  x509-auth.yaml
_mosquitto/: tls.conf
_mq/: 8883.yaml  clients.toml  satauth.yaml  x509auth.yaml
getting_started/: README.md
getting_started/dotnet/getting_started/: Program.cs  ca_chain.crt  getting_started.csproj
getting_started/dotnet/getting_started/MQTTnet.Client.Extensions/: CommandProducer.cs  ConnectionSettings.cs  IMessageSerializer.cs  ProtobufSerializer.cs  WithConnectionSettings.cs  X509ClientCertificateLocator.cs
getting_started/dotnet/getting_started/MQTTnet.Extensions/: ConnectionSettings.cs  MqttNetTraceLogger.cs  StringToDictionaryExtension.cs  WithConnectionSettings.cs  WithTlsSettings.cs  X509ChainValidator.cs  X509ClientCertificateLocator.cs  X509CommonNameParser.cs
getting_started/dotnet/getting_started/Properties/: launchSettings.json
mqttclients/: README.md
mqttclients/c/: README.md
mqttclients/c/mosquitto_client_extensions/: README.md  logging.h  mqtt_callbacks.c  mqtt_callbacks.h  mqtt_setup.c  mqtt_setup.h
mqttclients/c/mosquitto_client_extensions/json_handlers/: geo_json_handler.c  geo_json_handler.h
mqttclients/c/tests/: CMakeLists.txt  json_handler_test.c  json_handler_test.h  main.c  mqtt_client_test.c  mqtt_client_test.h
mqttclients/dotnet/: MQTTnet.Client.Extensions.sln  README.md
mqttclients/dotnet/IotHub/deploy/: leaf-device.yaml  module-sample.yaml  sts-module.yaml
mqttclients/dotnet/IotHub/leaf-device/: Device.cs  Program.cs  leaf-device.csproj
mqttclients/dotnet/IotHub/module-sample/: Module.cs  Program.cs  module-sample.csproj
mqttclients/dotnet/IotHub/sts-module/: AtomicBoolean.cs  MessageBody.cs  ModuleBackgroundService.cs  Program.cs  sts-module.csproj
mqttclients/dotnet/MQTTnet.Client.Extensions/: AlertConsumer.cs  CommandClient.cs  CommandConsumer.cs  CommandProducer.cs  CommandServer.cs  ConnectionSettings.cs  MQTTnet.Client.Extensions.csproj  MqttConnectionSettings.cs  MqttNetTraceLogger.cs  RequestTopicAttribute.cs  ResponseTopicAttribute.cs  TaskTimeoutExtension.cs  TelemetryConsumer.cs  TelemetryMessage.cs  TelemetryProducer.cs  Utf8JsonSerializer.cs  WithConnectionSettings.cs  WithJWT.cs  WithTlsSettings.cs  X509ChainValidator.cs  X509ClientCertificateLocator.cs  X509CommonNameParser.cs
mqttclients/dotnet/MQTTnet.Client.Extensions.Tests/: ConnectionSettingsFixture.cs  MQTTnet.Client.Extensions.Tests.csproj  MqttConnectionSettingsFixture.cs  Usings.cs  all_settings.txt  invalid_type_settings.txt  min_settings.txt
mqttclients/go/: ConnectionSettings.go  README.md  go.mod
mqttclients/python/: setup.py
mqttclients/python/connectionsettings/: connection_settings.py  mqtt_helpers.py
mqttclients/python/mqttclients/paho_client_wrapper/: __init__.py  connection_settings.py  paho_client_wrapper.py
mqttclients/python/mqttclients/scenario_settings/: scenario_settings.py
mqttclients/python/pahoclientwrapper/: connection_settings.py  mqtt_helpers.py  paho_client_wrapper.py
mqttclients/python/scenario_settings/: __init__.py  scenario_settings.py
mqttclients/rust/conn/: Cargo.toml
mqttclients/rust/conn/src/: lib.rs
mqttclients/ts/mqttjsClientExtensions/: package.json  tsconfig.json  tsconfig.tsbuildinfo
mqttclients/ts/mqttjsClientExtensions/src/: commandClient.ts  commandServer.ts  connectionSettings.ts  deferredPromise.ts  geoJsonPoint.ts  index.ts  logger.ts  messageSerializer.ts  mqttConnectionSettings.ts  sampleMqttClient.ts  telemetryConsumer.ts  telemetryMessage.ts  telemetryProducer.ts  utf8JsonSerializer.ts
scenarios/: Scenarios.sln
scenarios/alert/: README.md
scenarios/alert/dotnet/: alert.sln
scenarios/command/: README.md  unlock_command.proto
scenarios/command/TypeScript/: package-lock.json  package.json  tsconfig.json
scenarios/command/c/: CMakeLists.txt  unlock_command.pb-c.c  unlock_command.pb-c.h
scenarios/command/c/command_client/: main.c
scenarios/command/c/command_consumer/: main.c
scenarios/command/c/command_server/: main.c
scenarios/command/dotnet/: command.sln
scenarios/command/python/: command_invoker.py  command_receiver.py  mobile_app.py  request_ledger.py  vehicle_03.py
scenarios/command/ts/: package.json  tsconfig.json
scenarios/getting_started/: README.md
scenarios/getting_started/TypeScript/: package-lock.json  package.json  tsconfig.json
scenarios/getting_started/c/: CMakeLists.txt  main.c
scenarios/getting_started/dotnet/: getting_started.sln
scenarios/getting_started/go/: getting_started.go  go.mod  go.sum
scenarios/getting_started/python/: getting_started.py  scenario_settings.py
scenarios/getting_started/rust/getting_started/: Cargo.toml
scenarios/getting_started/rust/getting_started/src/: main.rs
scenarios/getting_started/ts/: package.json  tsconfig.json
scenarios/jwt_authentication/: README.md
scenarios/jwt_authentication/dotnet/: jwt_authentication.sln  nuget.config
scenarios/telemetry/: README.md  Routing_Instructions.md
scenarios/telemetry/TypeScript/: .eslintrc.js  package-lock.json  package.json
scenarios/telemetry/c/: CMakeLists.txt
scenarios/telemetry/c/telemetry_consumer/: main.c
scenarios/telemetry/c/telemetry_producer/: main.c
scenarios/telemetry/dotnet/: telemetry.sln  telemetry_producer.sln
scenarios/telemetry/python/: getting_started.py  telemetry_consumer.py  telemetry_producer.py
scenarios/telemetry/ts/: package.json  tsconfig.json
setup/certs/: README.md
setup/mosquitto/: README.md
(+121 files in other folders)
