[package]
name = "getting_started"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
# openssl = "0.10.36"
paho-mqtt = { version = "0.12.3", features = ["bundled"] }
dotenv = "0.15.0"
env_logger = "0.11.2"
ctrlc = "3.3.0"
conn = { path = "../../../../mqttclients/rust/conn" }
